--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,46 @@ body {
   padding: 0;
 }
 
+@layer base {
+  @layer base {
+    .arrorback {
+      @apply w-[30px] h-[30px]; /* Default size */
+    }
+  
+    @screen sm {
+      .arrorback {
+        @apply w-[35px] h-[35px]; /* Small screens */
+      }
+    }
+  
+    @screen md {
+      .arrorback {
+        @apply w-[40px] h-[40px]; /* Medium screens */
+      }
+    }
+  
+    @screen lg {
+      .arrorback {
+        @apply w-[50px] h-[50px]; /* Large screens */
+      }
+    }
+  
+    @screen xl {
+      .arrorback {
+        @apply w-[60px] h-[60px]; /* Extra large screens */
+      }
+    }
+  
+    @screen 2xl {
+      .arrorback {
+        @apply w-[70px] h-[70px]; /* Extra-extra large screens */
+      }
+    }
+  }
+  
+}
+
+
 
 .backgroundimage{
   background-image: url("./component/image/image2.png");
@@ -120,8 +160,6 @@ body {
 
 .arrorback{
   fill: #F2F4F4;
-  width: 70px;
-  height: 70px;
   flex-shrink: 0;
   background-color: #F2F4F4;
   border-radius: 100%;
@@ -130,7 +168,7 @@ body {
   align-items: center;
   cursor: pointer;
 }
-.arrorback:active{
+.arrorback:focus ,.arrorback:hover{
   opacity: 50%;
 }
 
@@ -142,4 +180,73 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 160%; /* 32px */
+}
+
+
+.swiper-3d .swiper-slide-shadow {
+  background: rgba(0, 0, 0, 0) !important;
+}
+
+.feature {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.feature.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.featureleft {
+  opacity: 0;
+  transform: translatey(50px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.featureleft.visibleleft {
+  opacity: 1;
+  transform: translatex(0);
+}
+
+.fatchanimaction{
+  animation-name: example;
+  animation-duration: 1s;
+}
+
+@keyframes example {
+  from {
+    transform: translatex(150px);
+  }
+  to {
+    transform: translatex(0);
+  }
+}
+
+.fatchanimactionright{
+  animation-name: exampleright;
+  animation-duration: 1s;
+}
+
+@keyframes exampleright {
+  from {
+    transform: translatey(200px);
+  }
+  to {
+    transform: translatey(0);
+  }
+}
+
+.fatchanimactionnavaction{
+  animation-name: examplenavaction;
+  animation-duration: 1s;
+}
+
+@keyframes examplenavaction {
+  from {
+    opacity:0;
+  }
+  to {
+    opacity: 1;
+  }
 }
